# tgfp_rust

./: Cargo.toml  LICENSE  README.md  t.md
log & ideas/: 05-01-24 - Advent of Great Trials.md  08-12-23 - Cogs Turn, No Matter How Rusty.md  15-12-23 - Bleeding Cyan.md  22-12-23 - A Spark, then Oblivion.md  29-12-23 - Glamour, Pride, Grace and Discipline.md  Guide.md  Ideas.md
src/: ai.rs  axiom.rs  components.rs  input.rs  main.rs  map.rs  network.rs  soul.rs  species.rs  text.rs  turn.rs  ui.rs  vaults.rs  world.rs
