[package]
name = "rust_tgfp"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[dependencies]
bevy = { version = "0.12", features = ["multi-threaded", "webgl2"]}
bevy_ggrs = { version = "0.14" }
bevy_matchbox = { version = "0.8", features = ["ggrs"] }
bevy_tweening = "0.9.0"
grid_pathfinding = "0.1.1"
