[package]
name = "rust_tgfp"
version = "0.1.0"
edition = "2021"

# [profile.dev.package."bevy-inspector-egui"]
# opt-level = 1

# [profile.dev.package."*"]
# opt-level = 3

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[dependencies]
bevy = { version = "0.12.1", features = ["multi-threaded", "webgl2", "dynamic_linking"]}
bevy-inspector-egui = "0.21.0"
bevy_mouse_tracking_plugin = "0.7.0"
bevy_tweening = "0.9.0"
grid_pathfinding = "0.1.1"
grid_util = "0.1.1"
pathfinding = "4.8.1"
rand = "0.8.5"
regex = "1.10.2"
